--- a/percolator/3.0/Dockerfile
+++ b/percolator/3.0/Dockerfile
@@ -1,23 +1,19 @@
-#################################################################
-# Dockerfile
-#
-# Version:          1
-# Software:         percolator
-# Software Version: 3.0
-# Description:      Semi-supervised learning for peptide identification from shotgun proteomics datasets
-# Website:          http://percolator.ms/
-# Tags:             Proteomics
-# Provides:         percolator 3.0
-# Base Image:       biodckr/biodocker:latest
-# Build Cmd:        docker build --rm -t biodckr/percolator 3.0/.
-# Pull Cmd:         docker pull biodckr/percolator
-# Run Cmd:          docker run --rm biodckr/percolator percolator
-#################################################################
+# Base Image
+FROM biocontainers/biocontainers:latest
 
-# Set the base image to biodckr/biodocker
-FROM biodckr/biodocker:latest
+# Metadata
+LABEL base.image="biocontainers:latest"
+LABEL version="3"
+LABEL software="Percolator"
+LABEL software.version="3.0"
+LABEL description="Semi-supervised learning for peptide identification from shotgun proteomics datasets"
+LABEL website="http://percolator.ms/"
+LABEL documentation="http://percolator.ms/"
+LABEL license="http://percolator.ms/"
+LABEL tags="Proteomics"
 
-################## BEGIN INSTALLATION ###########################
+# Maintainer
+MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
 
 USER root
 
@@ -33,8 +29,3 @@ RUN ZIP=ubuntu64_release.tar.gz && \
 USER biodocker
 
 WORKDIR /data/
-
-##################### INSTALLATION END ##########################
-
-# File Author / Maintainer
-MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
