--- a/samtools/1.3.1/Dockerfile
+++ b/samtools/1.3.1/Dockerfile
@@ -1,34 +1,22 @@
-#################################################################
-# Dockerfile
-#
-# Version:          1
-# Software:         Samtools
-# Software Version: 1.3.1
-# Description:      Tools (written in C using htslib) for manipulating next-generation sequencing data
-# Website:          https://github.com/samtools/samtools
-# Tags:             Genomics
-# Provides:         samtools 1.3.1
-# Base Image:       biodckr/biodocker
-# Build Cmd:        docker build biodckr/samtools 1.3.1/.
-# Pull Cmd:         docker pull biodckr/samtools
-# Run Cmd:          docker run biodckr/samtools
-#################################################################
+# Base Image
+FROM biocontainers/biocontainers:latest
 
-# base image
-FROM biodckr/biodocker
+# Metadata
+LABEL base.image="biocontainers:latest"
+LABEL version="2"
+LABEL software="Samtools"
+LABEL software.version="1.3.1"
+LABEL description="Tools for manipulating next-generation sequencing data"
+LABEL website="https://github.com/samtools/samtools"
+LABEL documentation="https://github.com/samtools/samtools"
+LABEL license="https://github.com/samtools/samtools"
+LABEL tags="Genomics"
 
-################## BEGIN INSTALLATION ###########################
+# Maintainer
+MAINTAINER Saulo Alves Aflitos <sauloal@gmail.com>
 
-# install
 RUN conda install samtools=1.3.1
 
-# change workdir to /data/
 WORKDIR /data/
 
-# define default command
 CMD ["samtools"]
-
-##################### INSTALLATION END ##########################
-
-# File Author / Maintainer
-MAINTAINER Saulo Alves Aflitos <sauloal@gmail.com>
