--- a/spectra-cluster-cli/1.0/Dockerfile
+++ b/spectra-cluster-cli/1.0/Dockerfile
@@ -1,23 +1,19 @@
-#################################################################
-# Dockerfile
-#
-# Version:          1
-# Software:         spectra-cluster-cli
-# Software Version: v1.0-beta
-# Description:      PRIDE Cluster algorithm to cluster heterogeneous mass spectra
-# Website:          https://github.com/spectra-cluster/spectra-cluster-cli
-# Tags:             Proteomics
-# Provides:         spectra-cluster-cli 1.0
-# Base Image:       biodckr/biodocker
-# Build Cmd:        docker build --rm -t biodckr/spectra-cluster-cli 1.0/.
-# Pull Cmd:         docker pull biodckr/spectra-cluster-cli
-# Run Cmd:          docker run -ti biodckr/spectra-cluster-cli java -jar /home/biodocker/bin/spectra-cluster-cli-1.0-SNAPSHOT.jar <options> <files>
-#################################################################
+# Base Image
+FROM biocontainers/biocontainers:latest
 
-FROM biodckr/biodocker:latest
+# Metadata
+LABEL base.image="biocontainers:latest"
+LABEL version="1"
+LABEL software="spectra-cluster-cli"
+LABEL software.version="v1.0-beta"
+LABEL description="PRIDE Cluster algorithm to cluster heterogeneous mass spectra"
+LABEL website="https://github.com/spectra-cluster/spectra-cluster-cli"
+LABEL documentation="https://github.com/spectra-cluster/spectra-cluster-cli"
+LABEL license="https://github.com/spectra-cluster/spectra-cluster-cli"
+LABEL tags="Proteomics"
 
-################## BEGIN INSTALLATION ###########################
-
+# Maintainer
+MAINTAINER Yasset Perez-Riverol <yperez@ebi.ac.uk>
 
 RUN ZIP=spectra-cluster-cli-1.0-SNAPSHOT-bin.zip && \
     wget https://github.com/spectra-cluster/spectra-cluster-cli/releases/download/v1.0-beta/$ZIP -O /tmp/$ZIP && \
@@ -29,7 +25,3 @@ RUN ZIP=spectra-cluster-cli-1.0-SNAPSHOT-bin.zip && \
 ENV PATH /home/biodocker/bin/spectra-cluster-cli:$PATH
 
 WORKDIR /data/
-##################### INSTALLATION END ##########################
-
-# File Author / Maintainer
-MAINTAINER Yasset Perez-Riverol <yperez@ebi.ac.uk>
