--- a/tpp/4.8/Dockerfile
+++ b/tpp/4.8/Dockerfile
@@ -1,27 +1,21 @@
-#################################################################
-# Dockerfile
-#
-# Version:          2
-# Software:         TPP
-# Software Version: 4.8
-# Description:      a collection of integrated tools for MS/MS proteomics
-# Website:          http://tools.proteomecenter.org/wiki/index.php?title=Software:TPP
-# Tags:             Proteomics
-# Provides:         tpp 4.8.0
-# Base Image:       biodckr/biodocker:latest
-# Build Cmd:        docker build --rm -t biodckr/tpp 4.8/.
-# Pull Cmd:         docker pull biodckr/tpp
-# Run Cmd:          docker run --rm biodckr/tpp
-# Extra:            This container only posses the binary files, the web interface is not configurated
-#################################################################
+# Base Image
+FROM biocontainers/biocontainers:latest
 
-# Set the base image to Ubuntu
-FROM biodckr/biodocker:latest
+# Metadata
+LABEL base.image="biocontainers:latest"
+LABEL version="2"
+LABEL software="TPP"
+LABEL software.version="4.8"
+LABEL description="a collection of integrated tools for MS/MS proteomics"
+LABEL website="http://tools.proteomecenter.org/wiki/index.php?title=Software:TPP"
+LABEL documentation="http://tools.proteomecenter.org/wiki/index.php?title=Software:TPP"
+LABEL license="http://tools.proteomecenter.org/wiki/index.php?title=Software:TPP"
+LABEL tags="Proteomics"
 
-# Change user to root
+# Maintainer
+MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
+
 USER root
-
-################## BEGIN INSTALLATION ######################
 
 WORKDIR /usr/local/
 
@@ -30,14 +24,6 @@ RUN wget https://github.com/BioDocker/software-archive/releases/download/TPP/tpp
 
 ENV PATH /usr/local/tpp/bin/:$PATH
 
-# Change user to back to biodocker
 USER biodocker
 
-# CHANGE WORKDIR TO /DATA
-WORKDIR /data
-
-##################### INSTALLATION END #####################
-
-# File Author / Maintainer
-MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
-# Modified by Felipe da Veiga Leprevost 01-26-2016
+WORKDIR /data/
