updated homepage url and fixed some typos

--- a/openms/2.0.0/Dockerfile
+++ b/openms/2.0.0/Dockerfile
@@ -6,10 +6,10 @@ LABEL base.image="biocontainers:latest"
 LABEL version="1"
 LABEL software="OpenMS"
 LABEL software.version="2.0.0"
-LABEL description="C++ libraries ans tools for MS/MS data analysis"
-LABEL website="http://open-ms.sourceforge.net/"
-LABEL documentation="http://open-ms.sourceforge.net/"
-LABEL license="http://open-ms.sourceforge.net/"
+LABEL description="C++ libraries and tools for MS data analysis"
+LABEL website="http://www.openms.de/"
+LABEL documentation="http://www.openms.de/"
+LABEL license="http://www.openms.de/"
 LABEL tags="Proteomics"
 
 # Maintainer
