updated tpp based images with missing libs

--- a/dia-umpire/2.1.2/Dockerfile
+++ b/dia-umpire/2.1.2/Dockerfile
@@ -3,7 +3,7 @@ FROM biocontainers/biocontainers:latest
 
 # Metadata
 LABEL base.image="biocontainers:latest"
-LABEL version="2"
+LABEL version="3"
 LABEL software="DIA-Umpire"
 LABEL software.version="2.1.2"
 LABEL description="computational analysis of data independent acquisition (DIA) mass spectrometry-based proteomics data"
@@ -19,7 +19,8 @@ USER root
 
 RUN apt-get update && \
   apt-get install -y \
-  gnuplot && \
+  gnuplot \
+  libfindbin-libs-perl && \
   apt-get clean && \
   apt-get purge && \
   rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
@@ -27,7 +28,7 @@ RUN apt-get update && \
 # Installing TPP
 RUN ZIP=tpp-5.0.zip && \
   mkdir -p /usr/local && \
-  wget https://github.com/BioDocker/software-archive/releases/download/TPP/$ZIP -O /tmp/$ZIP && \
+  wget https://github.com/BioContainers/software-archive/releases/download/TPP/$ZIP -O /tmp/$ZIP && \
   unzip /tmp/$ZIP -d /usr/local && \
   rm /tmp/$ZIP
 
@@ -35,7 +36,7 @@ ENV PATH /usr/local/tpp/bin/:$PATH
 
 # Installing DIA-Umpire
 RUN ZIP=v2.1.2.zip && \
-  wget https://github.com/BioDocker/software-archive/releases/download/DIA-Umpire/$ZIP -O /tmp/$ZIP && \
+  wget https://github.com/BioContainers/software-archive/releases/download/DIA-Umpire/$ZIP -O /tmp/$ZIP && \
   unzip /tmp/$ZIP -d /home/biodocker/bin/DIA-Umpire/ && \
   chmod -R 755 /home/biodocker/bin/DIA-Umpire/ && \
   rm /tmp/$ZIP
@@ -44,7 +45,7 @@ ENV PATH /home/biodocker/bin/DIA-Umpire/:$PATH
 
 # Installing Comet
 RUN ZIP=comet_binaries_2016012.zip && \
-  wget https://github.com/BioDocker/software-archive/releases/download/Comet/$ZIP -O /tmp/$ZIP && \
+  wget https://github.com/BioContainers/software-archive/releases/download/Comet/$ZIP -O /tmp/$ZIP && \
   unzip /tmp/$ZIP -d /home/biodocker/bin/comet/ && \
   rm /tmp/$ZIP && \
   chmod 755 /home/biodocker/bin/comet/comet_binaries_2016012/*.exe && \
@@ -54,7 +55,7 @@ ENV PATH /home/biodocker/bin/comet/:$PATH
 
 # Installing MSGF+
 RUN ZIP=MSGFPlus_9949.zip && \
-  wget https://github.com/BioDocker/software-archive/releases/download/MSGFPlus/$ZIP -O /tmp/$ZIP && \
+  wget https://github.com/BioContainers/software-archive/releases/download/MSGFPlus/$ZIP -O /tmp/$ZIP && \
   unzip /tmp/$ZIP -d /home/biodocker/bin/MSGFPlus/ && \
   chmod -R 755 /home/biodocker/bin/MSGFPlus/* && \
   rm /tmp/$ZIP
