--- a/tpp/5.0/Dockerfile
+++ b/tpp/5.0/Dockerfile
@@ -3,7 +3,7 @@ FROM biocontainers/biocontainers:latest
 
 # Metadata
 LABEL base.image="biocontainers:latest"
-LABEL version="2"
+LABEL version="3"
 LABEL software="TPP"
 LABEL software.version="5.0"
 LABEL description="a collection of integrated tools for MS/MS proteomics"
@@ -19,7 +19,9 @@ USER root
 
 WORKDIR /usr/local/
 
-RUN wget https://github.com/BioDocker/software-archive/releases/download/TPP/tpp-5.0.zip && \
+RUN apt-get update && apt-get install -y libfindbin-libs-perl && apt-get clean all
+
+RUN wget https://github.com/BioContainers/software-archive/releases/download/TPP/tpp-5.0.zip && \
   unzip tpp-5.0.zip
 
 ENV PATH /usr/local/tpp/bin/:$PATH
